--- a/src/main/resources/assets/mugmod/lang/en_us.json
+++ b/src/main/resources/assets/mugmod/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "item.mugmod.mug_can": "Mug Can",
   "item.mugmod.mug_essence": "Mug Essence",
-  "itemgroup.mug": "Mug"
+  "block.mugmod.mug_ore": "Mug Ore",
+  "itemgroup.mug": "MugMod"
 }
