--- a/src/main/resources/assets/mugmod/lang/en_us.json
+++ b/src/main/resources/assets/mugmod/lang/en_us.json
@@ -1,6 +1,18 @@
 {
   "item.mugmod.mug_can": "Mug Can",
   "item.mugmod.mug_essence": "Mug Essence",
+  "item.mugmod.aw_can": "A&W Can",
+
+  "item.mugmod.falconry_glove": "Falconry Glove",
+
+
   "itemgroup.mug": "Mug",
-  "block.mugmod.nether_mug_ore": "Nether Mug Ore"
+
+  "block.mugmod.nether_mug_ore": "Nether Mug Ore",
+  "block.mugmod.block_test": "Wowzers",
+
+  "painting.mugmod.tini_blaze.author": "Brendan O'Leary",
+  "painting.mugmod.tini_blaze.title": "Tini Blaze",
+  "painting.mugmod.bigrat.author": "Bigrat.Monster",
+  "painting.mugmod.bigrat.title": "Large Monsterous Rat"
 }
