--- a/src/main/resources/assets/mugmod/lang/en_us.json
+++ b/src/main/resources/assets/mugmod/lang/en_us.json
@@ -14,5 +14,7 @@
   "painting.mugmod.tini_blaze.author": "Brendan O'Leary",
   "painting.mugmod.tini_blaze.title": "Tini Blaze",
   "painting.mugmod.bigrat.author": "Bigrat.Monster",
-  "painting.mugmod.bigrat.title": "Large Monsterous Rat"
+  "painting.mugmod.bigrat.title": "Large Monsterous Rat",
+
+  "entity.mugmod.moose": "Moose"
 }
