Toxic Gauntilet items

--- a/src/main/resources/assets/mugmod/lang/en_us.json
+++ b/src/main/resources/assets/mugmod/lang/en_us.json
@@ -5,6 +5,8 @@
   "item.mugmod.falconry_glove": "Falconry Glove",
   "item.mugmod.kazoo": "Kazoo",
   "item.mugmod.parasol": "Parasol",
+  "item.mugmod.toxic_gauntlet_3d": "Toxic Gauntlet",
+
 
   "itemgroup.mug": "Mug",
 
